--- a/index.html
+++ b/index.html
@@ -8,14 +8,15 @@
 <body>
     <main>
 <header>
-    <h1>Título do site</h1>
+    <h1>Cursos Grátis</h1>
 </header>
 <article>
-    <h2>Artigo 001</h2>
+    <h2>Curso de HTML5 com CSS3</h2>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias rem eos eaque voluptate tenetur aliquam temporibus quod delectus dolorum sunt! Tenetur rem explicabo consequuntur repudiandae doloribus veritatis, omnis perferendis? Rem.</p>
 </article>
 <article>
-    <h2>Artigo 002</h2>
-    <p>Texto Artigo 002</p>
+    <h2>Curso de JavaScript </h2>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quisquam, rerum? Natus, laborum sit dignissimos ipsa pariatur maxime soluta illo laudantium, dicta molestiae distinctio dolore repudiandae rerum facilis ut inventore dolorem?</p>
 </article>
     </main>
 </body>
